--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-graceful-image": "^1.5.0",
     "react-player": "^2.15.1",
+    "react-progressive-image": "^0.6.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
