--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-graceful-image": "^1.5.0",
+    "react-helmet": "^6.1.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-player": "^2.15.1",
     "react-progressive-image": "^0.6.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "read-directory": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
