--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wedding_slideshow",
   "version": "0.1.0",
-  "homepage": "https://maxgrier.github.io/WeddingPhotos",
+  "homepage": "https://maxgrier.github.io/GrierWedding",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -11,6 +11,7 @@
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-font": "^1.2.1",
     "react-graceful-image": "^1.5.0",
     "react-helmet": "^6.1.0",
     "react-lazy-load-image-component": "^1.6.2",
